fix preorder cars
